--- a/programs/fusion-swap/Cargo.toml
+++ b/programs/fusion-swap/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "escrow"
+name = "fusion-swap"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "escrow"
+name = "fusion_swap"
 
 [features]
 default = []
