--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
 resolver = "2"
 
 [profile.release]
-overflow-checks = false
+overflow-checks = true
 lto = "fat"
 codegen-units = 1
 [profile.release.build-override]
