Create whitelist program

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,6 +6,7 @@ skip-lint = false
 
 [programs.localnet]
 fusion_swap = "AKEVm47qyu5E2LgBDrXifJjS2WJ7i4D1f9REzYvJEsLg"
+whitelist = "6Lt7x1RwTWFdvPM1Hn58HdVfvdhW6rNS1fTSWgSZJcZy"
 
 
 [registry]
