--- a/programs/whitelist/Cargo.toml
+++ b/programs/whitelist/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "fusion-swap"
+name = "whitelist"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "fusion_swap"
+name = "whitelist"
 
 [features]
 default = []
@@ -20,9 +20,9 @@ no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
+anchor-lang = { version = "0.30.1" }
 anchor-spl = "0.30.1"
-common = { path =  "../../common" }
+common = { path = "../../common" }
 
 [lints.rust]
 unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
