--- a/programs/fusion-swap/Cargo.toml
+++ b/programs/fusion-swap/Cargo.toml
@@ -23,6 +23,7 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
 anchor-spl = "0.30.1"
 common = { path =  "../../common" }
+whitelist = { path = "../whitelist", features = ["no-entrypoint"] }
 
 [lints.rust]
 unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
