--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@noble/hashes": "^1.7.1",
     "@solana/spl-token": "^0.4.9",
     "anchor-bankrun": "^0.5.0",
     "borsh": "^2.0.0",
