--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@solana-developers/helpers": "^2.7.0",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
