Fix yarn scripts

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "lint:ts": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
     "lint:fix": "yarn lint:ts:fix && yarn lint:rust:fix",
     "lint": "yarn lint:ts && yarn lint:rust",
-    "test": "RUST_LOG=error anchor test",
+    "test": "RUST_LOG=error yarn build && anchor test --skip-build",
     "clean": "anchor clean",
-    "build": "anchor build",
+    "build": "anchor build -p fusion-swap && anchor build -p whitelist && anchor build -p fusion-swap-native --no-idl",
     "new": "anchor new",
     "sync": "anchor keys sync",
     "typecheck": "tsc --noEmit --skipLibCheck",
