--- a/programs/whitelist/Cargo.toml
+++ b/programs/whitelist/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "whitelist"
 version = "0.1.0"
-description = "Created with Anchor"
+description = "Whitelist program for Solana"
 edition = "2021"
 
 [lib]
@@ -10,19 +10,18 @@ name = "whitelist"
 
 [features]
 default = []
-anchor-debug = []
-custom-heap = []
-custom-panic = []
-cpi = ["no-entrypoint"]
-no-entrypoint = []
-no-idl = []
-no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+idl-build = []
 
 [dependencies]
-anchor-lang = { version = "0.30.1" }
-anchor-spl = "0.30.1"
+solana-program = "1.18.1"
+borsh = "1.3.0"
+thiserror = "1.0.56"
 common = { path = "../../common" }
+anchor-lang = { version = "0.30.1", optional = true }
+
+[dev-dependencies]
+solana-program-test = "1.18.1"
+solana-sdk = "1.18.1"
 
 [lints.rust]
 unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
