--- a/native-programs/fusion-swap-native/Cargo.toml
+++ b/native-programs/fusion-swap-native/Cargo.toml
@@ -19,6 +19,9 @@ spl-token-2022 = { version = "3.0.5", features = ["no-entrypoint"] }
 borsh = { version = "=1.5.5", features = ["derive"] }
 shank_macro = "0.4.2"
 spl-discriminator = "0.4.1"
+spl-program-error = "0.6.0"
+thiserror = "2.0.11"
+num-derive = "0.4.2"
 
 [dev-dependencies]
 solana-program-test = "1.18.26"
