--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,5 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anchor-lang = "0.30.1"
-anchor-spl = "0.30.1"
+anchor-lang = { version = "0.30.1", optional = true }
+solana-program = { version = "1.18.26", optional = true }
+borsh = { version = "1.5.5", optional = true }
+borsh-derive = { version = "1.5.5", optional = true }
+
+[features]
+default = ["anchor"]
+native = ["borsh", "borsh-derive", "solana-program"]
+anchor = ["anchor-lang"]
