Use rustc 1.82.0 on CI

--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -29,9 +29,9 @@ runs:
 
     # Rust and Cargo
     - name: Set up Rust
-      uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@master
       with:
-        toolchain: ${{ inputs.rustc-version }}
+        toolchain: ${{ 1.82.0 }}
         components: clippy, rustfmt
     
     - name: Cache Cargo dependencies
