--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -23,17 +23,17 @@ runs:
       with:
         node-version: ${{ inputs.node-version }}
         cache: 'yarn'
-    
+
     - shell: bash
       run: yarn
 
     # Rust and Cargo
     - name: Set up Rust
-      uses: dtolnay/rust-toolchain@master
+      uses: dtolnay/rust-toolchain@1.82.0
       with:
         toolchain: ${{ inputs.rustc-version }}
         components: clippy, rustfmt
-    
+
     - name: Cache Cargo dependencies
       uses: Swatinem/rust-cache@v2
 
@@ -45,7 +45,7 @@ runs:
         path: ~/.local/share/solana
         key: solana-${{ runner.os }}-${{ inputs.solana-version }}
         restore-keys: solana-${{ runner.os }}-
-      
+
     - name: Install Solana CLI (if cache is not hit)
       shell: bash
       if: steps.cache-solana.outputs.cache-hit != 'true'
@@ -56,7 +56,7 @@ runs:
     - name: Add Solana CLI to PATH
       shell: bash
       run: echo "/home/runner/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
-    
+
     - name: Create Solana Wallet
       shell: bash
       run: solana-keygen new --no-bip39-passphrase
@@ -65,7 +65,7 @@ runs:
     - name: Install Anchor CLI
       shell: bash
       run: cargo install anchor-cli
-    
+
     # Verifications
     - name: Verify Yarn installation
       shell: bash
