--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -8,7 +8,7 @@ inputs:
   rustc-version:
     description: "Rust version"
     required: true
-    default: "stable"
+    default: "1.82.0"
   solana-version:
     description: "Solana version"
     required: true
@@ -29,7 +29,7 @@ runs:
 
     # Rust and Cargo
     - name: Set up Rust
-      uses: dtolnay/rust-toolchain@1.82.0
+      uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{ inputs.rustc-version }}
         components: clippy, rustfmt
