--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,3 @@
 [toolchain]
 channel = "1.82.0"
-components = ["rustfmt", "rustc", "cargo", "rust-analyzer", "clippy", "rust-std"]
-targets = [ "wasm32-unknown-unknown", "x86_64-unknown-linux-gnu" ]
+profile = "default"
