--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "lint:ts": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
     "lint:fix": "yarn lint:ts:fix && yarn lint:rust:fix",
     "lint": "yarn lint:ts && yarn lint:rust",
-    "test": "yarn build && RUST_LOG=error anchor test --skip-build && cargo test",
+    "test:all": "yarn build:all && RUST_LOG=error anchor test --skip-build && cargo test",
+    "test": "RUST_LOG=error anchor test",
     "clean": "anchor clean",
-    "build": "cargo build-sbf && anchor build -p fusion-swap && anchor build -p whitelist",
+    "build:all": "cargo build-sbf && anchor build -p fusion-swap && anchor build -p whitelist",
+    "build": "anchor build -p fusion-swap && anchor build -p whitelist",
     "new": "anchor new",
     "sync": "anchor keys sync",
     "typecheck": "tsc --noEmit --skipLibCheck",
