--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -64,7 +64,7 @@ runs:
     # Anchor
     - name: Install Anchor CLI
       shell: bash
-      run: cargo install anchor-cli
+      run: cargo install anchor-cli --version 0.30.1
 
     # Verifications
     - name: Verify Yarn installation
