--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -12,7 +12,7 @@ inputs:
   solana-version:
     description: "Solana version"
     required: true
-    default: "stable"
+    default: "2.1.0"
 
 runs:
   using: "composite"
@@ -64,7 +64,7 @@ runs:
     # Anchor
     - name: Install Anchor CLI
       shell: bash
-      run: cargo install anchor-cli --version 0.30.1
+      run: cargo install anchor-cli --version 0.31.0
 
     # Verifications
     - name: Verify Yarn installation
