--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -27,6 +27,9 @@ runs:
     - shell: bash
       run: yarn
 
+    - shell: bash
+      run: sudo apt-get install libudev-dev
+
     # Rust and Cargo
     - name: Set up Rust
       uses: dtolnay/rust-toolchain@master
