--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -12,7 +12,7 @@ inputs:
   solana-version:
     description: "Solana version"
     required: true
-    default: "2.1.0"
+    default: "v2.1.0"
 
 runs:
   using: "composite"
