--- a/programs/fusion-swap/Cargo.toml
+++ b/programs/fusion-swap/Cargo.toml
@@ -25,7 +25,9 @@ anchor-spl = "0.31.0"
 common = { path =  "../../common" }
 whitelist = { path = "../whitelist", features = ["no-entrypoint"] }
 muldiv = "1.0.1"
-proc-macro2 = "=1.0.94"
+
+[patch.crates-io]
+proc-macro2 = { git = "https://github.com/dtolnay/proc-macro2", rev = "83519e88337217c75794935381de61ab02c60a9b" }
 
 [lints.rust]
 unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
