--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -85,3 +85,12 @@ runs:
     - name: Verify Anchor CLI installation
       shell: bash
       run: anchor --version
+
+    # Update in proc-macro2 crate broke the compatibility and here is a temporary
+    # workaround to resolve it
+    #
+    # https://github.com/solana-foundation/anchor/issues/3662#issuecomment-2809237122
+    # https://solana.stackexchange.com/questions/21558/errore0599-no-method-named-source-file-found-for-struct-proc-macro2span
+    - name: Downgrade proc-macro2 craete (temporary)
+      shell: bash
+      run: cargo update -p proc-macro2 --precise 1.0.94 --manifest-path anchor/Cargo.toml
