--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [workspace]
 members = [
+    # 'native-programs' folder is excluded from this list intentionally
+    # and needs to be added back when the development of 'fusion-swap-native'
+    # program will be continued.
     "programs/*"
 ]
 resolver = "2"
