--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint:fix": "yarn lint:ts:fix && yarn lint:rust:fix",
     "lint": "yarn lint:ts && yarn lint:rust",
     "test:all": "yarn build:all && RUST_LOG=error anchor test --skip-build && cargo test",
-    "test": "RUST_LOG=error anchor test",
+    "test": "RUSTUP_TOOLCHAIN=nightly-2025-04-14 RUST_LOG=error anchor test",
     "clean": "anchor clean",
     "build:all": "cargo build-sbf && anchor build -p fusion-swap && anchor build -p whitelist",
-    "build": "anchor build -p fusion-swap && anchor build -p whitelist",
+    "build": "RUSTUP_TOOLCHAIN=nightly-2025-04-14 anchor build -p fusion-swap && anchor build -p whitelist",
     "new": "anchor new",
     "sync": "anchor keys sync",
     "typecheck": "tsc --noEmit --skipLibCheck",
