Enable AI review job

--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -1,27 +1,26 @@
-# This workflow is temporarily disabled due to CI issue.
-# name: AI Code Review
+name: AI Code Review
 
-# permissions:
-#   contents: read
-#   pull-requests: write
+permissions:
+  contents: read
+  pull-requests: write
 
-# on:
-#   pull_request:
-#     types: [opened, reopened, synchronize]
+on:
+  pull_request:
+    types: [opened, reopened, synchronize]
 
-# jobs:
-#   code_review:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v3
+jobs:
+  code_review:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-#       - name: Install dependencies
-#         run: pip install openai requests
+      - name: Install dependencies
+        run: pip install openai requests
 
-#       - name: Run AI code review script
-#         env:
-#           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-#           OPENAI_MODEL: o1-preview
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         run: python3 .github/scripts/ai_review.py
+      - name: Run AI code review script
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_MODEL: o1-preview
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: python3 .github/scripts/ai_review.py
