--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "license": "ISC",
+  "license": "MIT",
   "scripts": {
     "lint:rust:fix": "cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
     "lint:rust": "cargo fmt -- --check && cargo clippy",
