--- a/programs/whitelist/Cargo.toml
+++ b/programs/whitelist/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "whitelist"
-version = "0.1.0"
+version = "1.0.0"
 description = "Created with Anchor"
 edition = "2021"
 
@@ -23,6 +23,7 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 anchor-lang = { version = "0.31.1" }
 anchor-spl = "0.31.1"
 common = { path = "../../common" }
+solana-security-txt = "1.1.1"
 
 [lints.rust]
 unexpected_cfgs = { level = "allow", check-cfg = ["cfg(solana)"] }
